--- a/snack 3/index.html
+++ b/snack 3/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSnacks Blocco 2</title>
+    <title>Snack 3</title>
 </head>
 <body>
     
-
 
     <script src="js/main.js"></script>
 </body>
